--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -184,9 +184,9 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <RelativeLayout
+<!--    <RelativeLayout
         android:id="@+id/whitebackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"></RelativeLayout>
+        android:background="@color/white"></RelativeLayout>-->
 </RelativeLayout>
