--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -39,9 +39,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_regular"
-            android:lines="3"
+            android:ellipsize="end"
             android:text="@string/dummY_text"
             android:textColor="@color/white"
+            android:lines="5"
             android:textSize="@dimen/_7sdp" />
     </LinearLayout>
 
