--- a/app/src/main/res/layout/activity_edit_pet_profile.xml
+++ b/app/src/main/res/layout/activity_edit_pet_profile.xml
@@ -303,21 +303,38 @@
                 android:text="@string/about_pet"
                 android:textSize="@dimen/_14sdp" />
 
-            <EditText
-                android:id="@+id/etAbout"
-                style="@style/MatchEditText"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_100sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/bg_edit_text"
-                android:gravity="start|top"
-                android:hint="@string/about_pet"
-                android:imeOptions="actionDone"
-                android:inputType="textMultiLine"
-                android:maxHeight="@dimen/_100sdp"
-                android:minHeight="@dimen/_100sdp"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingTop="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp" />
+                android:background="@drawable/bg_edit_text">
+
+                <EditText
+                    android:id="@+id/etAbout"
+                    style="@style/MatchEditText"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:gravity="start|top"
+                    android:hint="@string/about_pet"
+                    android:imeOptions="actionDone"
+                    android:padding="@dimen/_5sdp" />
+            </LinearLayout>
+
+            <!--  <EditText
+                  android:id="@+id/etAbout"
+                  style="@style/MatchEditText"
+                  android:layout_height="wrap_content"
+
+
+                  android:gravity="start|top"
+                  android:hint="@string/about_pet"
+                  android:imeOptions="actionDone"
+                  android:inputType="textMultiLine"
+                  android:maxHeight="@dimen/_100sdp"
+                  android:minHeight="@dimen/_100sdp"
+                  android:paddingStart="@dimen/_10sdp"
+                  android:paddingTop="@dimen/_10sdp"
+                  android:paddingEnd="@dimen/_10sdp" />-->
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnUpdate"
