--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -72,7 +72,8 @@
                 android:background="@drawable/bg_edit_text"
                 android:hint="@string/enter_email"
                 android:imeOptions="actionDone"
-                android:inputType="textEmailAddress"
+                android:focusable="false"
+                android:inputType="none"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
                 android:text="jonson@gmail.com" />
