--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -77,6 +77,7 @@
                         android:layout_marginRight="@dimen/_4sdp"
                         android:layout_weight="1"
                         android:background="@drawable/bg_edit_text">
+
                         <Spinner
                             android:id="@+id/spinnerGender"
                             android:layout_width="match_parent"
@@ -101,7 +102,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:hint="@string/enter_age"
                         android:imeOptions="actionNext"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:paddingStart="@dimen/_10sdp"
                         android:paddingEnd="@dimen/_10sdp" />
 
