--- a/app/src/main/res/layout/add_record_layout.xml
+++ b/app/src/main/res/layout/add_record_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -20,24 +20,54 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/_15sdp">
 
-                <ImageView
-                    android:id="@+id/iv_record"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_160sdp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/img" />
+                    android:layout_height="wrap_content">
+
+
+                    <ImageView
+                        android:id="@+id/iv_record"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_160sdp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iv_edit"
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
+                            android:src="@drawable/edit" />
+
+                        <ImageView
+                            android:id="@+id/iv_delete"
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:src="@drawable/delet" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/tv_record"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:padding="@dimen/_5sdp"
                 android:text="gergegesgfergergherherherhrehwerhergrfgefsefsfwefwefweffwefwefwefwefweg"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14sdp" />
+                android:textSize="@dimen/_12sdp" />
         </LinearLayout>
-
 
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
