2022 jan 4 pet records

--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.ui.AddRecordActivity">
-
+    tools:context=".ui.main.ui.add_record.AddRecordActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -15,28 +14,45 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <include
-                android:id="@+id/tb_add"
+                android:id="@+id/toolbar"
                 layout="@layout/auth_toolbar" />
 
-            <TextView
-                android:id="@+id/tvadd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tb_add"
+            <RelativeLayout
+                android:id="@+id/llSelect"
+                android:layout_width="match_parent"
+                android:layout_below="@id/toolbar"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="Select Image"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_15sdp" />
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tvadd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_alignParentStart="true"
+                    android:text="Select Image"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_15sdp" />
+
+                <TextView
+                    android:id="@+id/tvAdd"
+                    style="@style/WrapTextView"
+                    android:layout_alignParentEnd="true"
+                    android:text="@string/add"
+                    android:textColor="@color/colorPrimary" />
+
+
+            </RelativeLayout>
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_select_add_post"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_180sdp"
-                android:layout_below="@id/tvadd"
+                android:layout_height="@dimen/_230sdp"
+                android:layout_below="@id/llSelect"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
@@ -44,33 +60,49 @@
                 app:cardCornerRadius="@dimen/_15sdp">
 
                 <RelativeLayout
+                    android:id="@+id/view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
-                        android:layout_width="@dimen/_120sdp"
-                        android:layout_height="@dimen/_120sdp"
-                        android:layout_centerInParent="true"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/add_pic" />
 
-
-                    <ImageView
-                        android:id="@+id/ivAddPost"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_img"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop" />
+                        android:layout_height="@dimen/_200sdp"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:nestedScrollingEnabled="false"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-                    <!--                    <ProgressBar-->
-                    <!--                        android:id="@+id/anim_progress_add"-->
-                    <!--                        android:layout_width="wrap_content"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:layout_centerInParent="true"-->
-                    <!--                        android:backgroundTint="@color/colorPrimaryDark"-->
-                    <!--                        android:indeterminate="true"-->
-                    <!--                        android:indeterminateTint="@color/Orange"-->
+                    <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
+                        android:id="@+id/indicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/rv_img"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        app:spi_dotColor="@color/black"
+                        app:spi_dotSelectedColor="@color/grey"
+                        app:spi_dotSelectedSize="@dimen/_6sdp"
+                        app:spi_dotSize="@dimen/_4sdp" />
 
-                    <!--                        android:visibility="gone" />-->
+                    <!--
+                       <ImageView
+                           android:layout_width="@dimen/_120sdp"
+                           android:layout_height="@dimen/_120sdp"
+                           android:layout_centerInParent="true"
+                           android:scaleType="centerCrop"
+                           android:src="@drawable/add_pic" />
+                       <ImageView
+                           android:id="@+id/ivAddPost"
+                           android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:scaleType="centerCrop" />
+   -->
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -126,6 +158,7 @@
                 android:layout_marginTop="@dimen/_50sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
+                android:fontFamily="@font/opensans_bold"
                 android:background="@drawable/bg_sky_blue_10dp"
                 android:text="Add Record" />
         </RelativeLayout>
