--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -8,17 +8,14 @@
     android:fillViewport="true"
     android:orientation="vertical"
     tools:context=".ui.main.ui.category_detail.CategoryDetailActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_half"
         android:orientation="vertical">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_220sdp">
-
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/img"
                 android:layout_width="match_parent"
@@ -27,13 +24,10 @@
                 android:src="@drawable/dog_img"
                 app:riv_corner_radius_bottom_left="@dimen/_10sdp"
                 app:riv_corner_radius_bottom_right="@dimen/_10sdp" />
-
             <include
                 android:id="@+id/tb"
                 layout="@layout/auth_toolbar" />
-
         </RelativeLayout>
-
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,16 +37,13 @@
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_10sdp"
             app:cardUseCompatPadding="true">
-
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fillViewport="true">
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
                     <TextView
                         android:id="@+id/tv_description"
                         style="@style/TextRegularFont"
@@ -68,7 +59,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
             </ScrollView>
         </androidx.cardview.widget.CardView>
 
@@ -78,11 +68,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
             android:orientation="vertical"
-            android:visibility="gone"
+
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/add_record_layout" />
-    </LinearLayout>
 
+    </LinearLayout>
     <ImageView
         android:id="@+id/iv_addRecord"
         android:layout_width="@dimen/_30sdp"
@@ -94,7 +84,6 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:scaleType="centerCrop"
-        android:src="@drawable/add_record"
-        android:visibility="gone" />
+        android:src="@drawable/add_record" />
 
 </RelativeLayout>
