--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,8 +34,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/petprofile"
-                    android:contentDescription="@string/image" />
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/petprofile" />
 
                 <TextView
                     android:id="@+id/tv_choose_dog"
